# PiRacer_team1

./: .gitignore  Cluster.md  HeadUnit.md  PiRacer.md  README.md  apt-manual.txt  bootstrap-apt.sh  launch.py  requirements.txt
mdFiles/: Cluster.md  Dashboard.md  PiRacer.md  log.md
sources.list.d.backup/: docker.list
src/: can_receiver.py  can_receiver2.py
src/Arduino/can_speed/: can_speed.ino
src/Arduino/kalman_rpm/: kalman_rpm.ino
src/Arduino/maxidiffrpm/: maxi10rpm.ino
src/Arduino/speed_sensor/: speed_sensor.ino
src/Cluster/: CMakeLists.txt  Main.qml  main.cpp  qml.qrc
src/Cluster/Cluster/: CMakeLists.txt  Cluster.qmlproject  Cluster.qmlproject.qtds  Cluster.qmlproject.qtds.c1a4ff3  qml.qrc  qmlmodules
src/Cluster/Cluster/content/: App.qml  ClipImage.ui.qml  ModeToggleIcon.ui.qml  MusicToggleButton.ui.qml  PlayList.ui.qml  RpmSegment.ui.qml  Screen01.ui.qml  Screen02.ui.qml  Tacho.ui.qml
src/Cluster/Cluster/imports/: CMakeLists.txt
src/Cluster/Cluster/imports/Cluster/: CMakeLists.txt  Constants.qml  GearDisplay.ui.qml  GearState.qml  KeyboardController.qml  qmldir
src/Cluster/Cluster/imports/Cluster/designer/: plugin.metainfo
src/Cluster/Cluster/imports/MotorClusterData/: Constants.qml  MotorClusterData.qmlproject  Style.qml  qmldir
src/Cluster/Cluster/src/: CanReceiver.cpp  CanReceiver.hpp  import_qml_plugins.h  main.cpp
src/Head_U/: CMakeLists.txt  images.qrc  mainwindow.cpp  mainwindow.ui  rpm_calculate.cpp  rpm_calculate.h
src/SpeedCluster/SpeedCluster/: CMakeLists.txt  main.cpp
src/board/: can_rpm.py  config.txt  ip_display.py
src/camera_stream/: camera_web.py  stream_web.py
src/control/: basic_example.py  remote_can.py  remote_control.py
src/dashboard/: ProcessDashboard.py  server.py
src/dashboard/frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
src/dashboard/frontend/piracer-dash/: package-lock.json  package.json
src/dashboard/frontend/src/: App.tsx  index.css  main.tsx
src/dashboard/frontend/src/components/: Card.tsx
src/dashboard/frontend/src/hooks/: useTelemetry.ts
src/dashboard/frontend/src/lib/: telemetry.ts
src/dashboard/static/: index.html
src/dashboard/static/assets/: index-BD149Tbp.js  index-BdBXJP8q.js  index-BdwSpRou.css  index-BmYLMU8n.js  index-Bq6UlVbU.js  index-BqBOLQEO.js  index-CExNB0w3.js  index-CFUr5rMg.js  index-CGxjTTcJ.css  index-CO4goShT.css  index-CWdoguCQ.js  index-CZnuzV1Q.css  index-CcizB8-K.css  index-Co07ToMc.css  index-CoMHReap.css  index-D3MgBErh.css  index-D3eFL6Dg.css  index-D44OPdeh.css  index-D8Ohd1M6.js  index-DS4Lfhyb.css  index-DXF4DN7Q.js  index-DhNAF4yu.js  index-Diagn7OV.js  index-DvxjsmOp.css  index-SgxU_zs5.css  index-xdtWnss6.css
src/display/: install_display_service.sh
